Add documentation for /login endpoint.
